# Finance_project

./: .gitignore  README.md  __main__.py  pymysql.py  pyproject.toml  stock_info.csv  stocke_info.py
mysql_script/: create_data_table.py  import_sql_sqcipt.sql  import_to_data.sh  insert_vale.py  sql_script.sql
