[tool.poetry]
name = "finace-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "finace_project"}]

[tool.poetry.dependencies]
python = "^3.7"
pandas-datareader = "^0.10.0"
requests-cache = "^1.1.1"
lxml = "^4.9.3"
bs4 = "^0.0.1"
selenium = "4.0.0"
pymysql = "^1.1.0"
html5lib = "^1.1"
finmind = "^1.6.3"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
